@@ -30,7 +30,7 @@ enum otype
 	CONS = (1 << 4),
 	PROC = (1 << 5),
 	PRIMOP = (1 << 6),
-	ASCII = (1 << 7),
+	CHAR = (1 << 7),
 	STRING = (1 << 8)
 };
 
